apps/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: lscr.io/linuxserver/transmission:latest
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
            - name: media
              mountPath: /downloads
              subPath: torrents
            - name: media
              mountPath: /watch
              subPath: watch
      volumes:
        - name: config
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
