apps/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: media
spec:
  selector:
    app: transmission
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9091
